Fixed some errors
+ Fixed weird scrollbars displaying upon changing zone
+ Fixed notations in statistics

--- a/Pokemon Safari/css/global.css
+++ b/Pokemon Safari/css/global.css
@@ -16,6 +16,7 @@ BODY {
 	background: #dcddd8;
 	padding: 0;
 	margin: 0;
+	overflow: hidden;
 	font-family: "Gudea", "Helvetica Neue", Helvetica, Arial;
 }
 
